--- a/index.html
+++ b/index.html
@@ -190,129 +190,132 @@
 
         <div id="bookingContent">
 
-          <div id="bookingProgress">
+          <div class="inner">
 
-            <p>
-              <span id="stageDetails" class="active">1.Passenger details</span>
-              <i class="fa fa-caret-right" aria-hidden="true"></i>
-              <span id="stagePayment">2.Payment</span>
-              <i class="fa fa-caret-right" aria-hidden="true"></i>
-              <span id="stageConfirm">3.Confirmation</span>
-            </p>
+            <div id="bookingProgress">
 
-          </div>
+              <p>
+                <span id="stageDetails" class="active">1.Details</span>
+                <i class="fa fa-caret-right" aria-hidden="true"></i>
+                <span id="stagePayment">2.Payment</span>
+                <i class="fa fa-caret-right" aria-hidden="true"></i>
+                <span id="stageConfirm">3.Confirmation</span>
+              </p>
 
-          <div id="booking1" class="container inner">
-
-            <h1>Passenger details</h1>
-
-            <p>Already a member? <a href="#">Log in</a></p>
-
-            <div>
-              <div class="col-md-12">
-                <form id="details-form">
-                  <div class="form-row">
-                    <div class="col-xs-12 form-group required">
-                      <label class="control-label">First Name</label>
-                      <input class="form-control" size="4" type="text">
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="col-xs-12 form-group card required">
-                      <label class="control-label">Last Name</label>
-                      <input autocomplete="off" class="form-control card-number" size="20" type="text">
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="col-xs-12 form-group card required">
-                      <label class="control-label">Email</label>
-                      <input autocomplete="off" class="form-control card-number" size="20" type="text">
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="col-xs-12 form-group card required">
-                      <label class="control-label">Phone Number</label>
-                      <input autocomplete="off" class="form-control card-number" size="20" type="text">
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="col-md-12 form-group">
-                      <button id="detailsButton" class="form-control btn btn-primary submit-button" type="button">Proceed to payment</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
             </div>
 
-          </div>
+            <div id="booking1" class="container inner">
 
-          <div id="booking2" class="container inner">
+              <div class="col-xs-12">
 
-            <h1>Payment</h1>
+                <h1>Passenger details</h1>
 
-            <div>
-              <div class="col-md-12">
-                <form id="payment-form">
-                  <div class="form-row">
-                    <div class="col-xs-12 form-group required">
-                      <label class="control-label">Name on Card</label>
-                      <input class="form-control" size="4" type="text">
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="col-xs-12 form-group card required">
-                      <label class="control-label">Card Number</label>
-                      <input autocomplete="off" class="form-control card-number" size="20" type="text">
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="col-xs-4 form-group cvc required">
-                      <label class="control-label">CVC</label>
-                      <input autocomplete="off" class="form-control card-cvc" placeholder="ex. 311" size="4" type="text">
-                    </div>
-                    <div class="col-xs-4 form-group expiration required">
-                      <label class="control-label">Expiration</label>
-                      <input class="form-control card-expiry-month" placeholder="MM" size="2" type="text">
-                    </div>
-                    <div class="col-xs-4 form-group expiration required">
-                      <label class="control-label"> </label>
-                      <input class="form-control card-expiry-year" placeholder="YYYY" size="4" type="text">
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="col-md-12 form-group">
-                      <button id="paymentButton" class="form-control btn btn-primary submit-button" type="button">Book flights</button>
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <div class="col-md-12 error form-group hide">
-                      <div class="alert-danger alert">
-                        Please correct the errors and try again.
+                <p>Already a member? <a href="#">Log in</a></p>
+
+              </div>
+
+              <div>
+                <div class="col-md-12">
+                  <form id="details-form">
+                    <div class="form-row">
+                      <div class="col-xs-12 form-group required">
+                        <label class="control-label">First Name</label>
+                        <input class="form-control" size="4" type="text">
                       </div>
                     </div>
-                  </div>
-                </form>
+                    <div class="form-row">
+                      <div class="col-xs-12 form-group card required">
+                        <label class="control-label">Last Name</label>
+                        <input autocomplete="off" class="form-control card-number" size="20" type="text">
+                      </div>
+                    </div>
+                    <div class="form-row">
+                      <div class="col-xs-12 form-group card required">
+                        <label class="control-label">Email</label>
+                        <input autocomplete="off" class="form-control card-number" size="20" type="text">
+                      </div>
+                    </div>
+                    <div class="form-row">
+                      <div class="col-xs-12 form-group card required">
+                        <label class="control-label">Phone Number</label>
+                        <input autocomplete="off" class="form-control card-number" size="20" type="text">
+                      </div>
+                    </div>
+                    <div class="form-row">
+                      <div class="col-md-12 form-group">
+                        <button id="detailsButton" class="form-control btn btn-primary submit-button" type="button">Proceed to payment</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
 
-          </div>
+            <div id="booking2" class="container inner">
 
-          <div id="booking3" class="inner">
-
-            <h1>Booking Complete!</h1>
-
-            <p>Pack your bags, you're going to Singapore!</p>
-
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title">Good to know</h3>
+              <div class="col-xs-12">
+                <h1>Payment</h1>
               </div>
-              <div class="panel-body">
-                Panel content
+
+              <div>
+                <div class="col-md-12">
+                  <form id="payment-form">
+                    <div class="form-row">
+                      <div class="col-xs-12 form-group required">
+                        <label class="control-label">Name on Card</label>
+                        <input class="form-control" size="4" type="text">
+                      </div>
+                    </div>
+                    <div class="form-row">
+                      <div class="col-xs-12 form-group card required">
+                        <label class="control-label">Card Number</label>
+                        <input autocomplete="off" class="form-control card-number" size="20" type="text">
+                      </div>
+                    </div>
+                    <div class="form-row">
+                      <div class="col-xs-4 form-group cvc required">
+                        <label class="control-label">CVC</label>
+                        <input autocomplete="off" class="form-control card-cvc" placeholder="ex. 311" size="4" type="text">
+                      </div>
+                      <div class="col-xs-4 form-group expiration required">
+                        <label class="control-label">Expiration</label>
+                        <input class="form-control card-expiry-month" placeholder="MM" size="2" type="text">
+                      </div>
+                      <div class="col-xs-4 form-group expiration required">
+                        <label class="control-label"> </label>
+                        <input class="form-control card-expiry-year" placeholder="YYYY" size="4" type="text">
+                      </div>
+                    </div>
+                    <div class="form-row">
+                      <div class="col-md-12 form-group">
+                        <button id="paymentButton" class="form-control btn btn-primary submit-button" type="button">Book flights</button>
+                      </div>
+                    </div>
+                    <div class="form-row">
+                      <div class="col-md-12 error form-group hide">
+                        <div class="alert-danger alert">
+                          Please correct the errors and try again.
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
 
-            <a class="btn btn-primary btn-lg" href="index.html" role="button">Back to start</a>
+            <div id="booking3" class="container inner">
+
+              <div class="col-xs-12">
+
+                <h1>Booking Complete!</h1>
+
+                <p>Pack your bags, you're going to Singapore!</p>
+
+                <a href="index.html" class="btn btn-default" role="button">Back to front page</a>
+
+              </div>
+
+            </div>
 
           </div>
 
